--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wallet-sim-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://freq95.github.io/mvx-crack-the-guardian/",
+  "homepage": "https://freq95.github.io/mvx-wallet-cracker",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
