--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "homepage": "https://freq95.github.io/mvx-wallet-cracker",
   "dependencies": {
+    "@multiversx/sdk-dapp": "^5.0.11",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
